hphp/test/quick/function_pointer/bad_syntax.php.expectf
Fatal error: Function pointers `<>` can only be created with toplevel functions and explicitly named static methods. Use lambdas `(...) ==> {...}` for other cases. in %s on line 9
